hphp/test/zend/good/zend/bug45147.php
<?php for ($i = 0; $i == 0; $i++): ?>
		<?php if (true): ?>#<?php else: ?>#<?php endif; ?>
<?php endfor; ?>