hphp/test/zend/bad/ext/spl/tests/bug49972.php
<?php

$iterator = new AppendIterator();
$iterator->undefined();

?>